syntax = "proto3";

package trpc.wealthai.strategy_spec;

import "google/protobuf/empty.proto";

option go_package="github.com/wealthai-cc/protocol/strategy_spec";

// Bar 代表一根K线
message Bar {
    int64 open_time = 1; // 开盘时间（unix时间戳毫秒）
    int64 close_time = 2; // 收盘时间（unix时间戳毫秒），未闭合时为当前计算窗口的结束时间
    string open = 3; // 开盘价（字符串，保持精度）
    string high = 4; // 最高价（字符串，保持精度）
    string low = 5; // 最低价（字符串，保持精度）
    string close = 6; // 收盘价（字符串，保持精度）
    string volume = 7; // 成交量（字符串，保持精度）
}

// Indicator 在给定时间点下的技术指标，该时间一般与对应的 bar 的 close_time 一致
message Indicator {
    int64 timestamp = 1; // 时间戳（unix毫秒时间戳）
    MAIndicator ma_indicator = 2; // MA 指标
    EMAIndicator ema_indicator = 3; // EMA指标
}

message MAIndicator {
    map<int,double> moving_average = 1; // 不同天数下的 MA（Moving Average）指标，
}

message EMAIndicator {
    map<int,double> exp_moving_average = 1; // 不同天数下的 EMA（Exponential Moving Average）指标，
}

message MarketDataContext {
    string symbol = 1; // 交易对
    string timeframe = 2; // 分辨率（1m/3m/5m/15m/30m/1h/4h/1d/1w）
    repeated Bar bars = 3; // 行情数据
    repeated Indicator indicators = 4; // 技术指标数据，与每个 bar 的 close_time 对齐
}